syntax = "proto3";

package proto.mrds.ledger.metainstance;

// Import the Metadata from the core metadata.proto file
import "metadata.proto";

option go_package = "/api/mrdspb";

// Enum to represent the MetaInstanceState
enum MetaInstanceState {
    MetaInstanceState_UNKNOWN = 0;
	MetaInstanceState_PENDING = 1;
    MetaInstanceState_ACTIVE = 2;
    MetaInstanceState_INACTIVE = 3;
}

// Message representing the MetaInstance
message MetaInstance {
    // Metadata is the metadata that identifies the MetaInstance.
    core.Metadata metadata = 1;

    // Name is the name of the MetaInstance.
    string name = 2;

    // Status represents the current status of the MetaInstance.
    MetaInstanceStatus status = 3;
}

// Message representing the Status of a resource.
message MetaInstanceStatus {
    // State is the discrete condition of the resource.
    MetaInstanceState state = 1;

    // Message is a human-readable description of the resource's state.
    string message = 2;
}
